fud2/tests/snapshots/tests__test@dahlia_to_calyx.snap
---
source: fud2/tests/tests.rs
description: "emit request: dahlia -> calyx"
snapshot_kind: text
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

parent-map = parent-map.json
dahlia-exe = /test/bin/dahlia
dahlia-args = 
rule dahlia-to-calyx
  command = $dahlia-exe -b calyx --lower -l error $dahlia-args $in > $out

build _to_stdout_calyx.futil: dahlia-to-calyx _from_stdin_dahlia.fuse

default _to_stdout_calyx.futil
