fud2/tests/snapshots/tests__test@mrxl_to_calyx.snap
---
source: fud2/tests/tests.rs
description: "emit request: mrxl -> calyx"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

mrxl_flags = 
mrxl-exe = mrxl
rule mrxl-to-calyx
  command = $mrxl-exe $in ${mrxl_flags} > $out

build calyx_1.futil: mrxl-to-calyx mrxl_0.mrxl

default calyx_1.futil
